# teraspot

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy-lambdas.yml  deploy.yml
backend/: conftest.py  pytest.ini  requirements.txt  test_results.txt
backend/lambdas/analytics_notifier/: event.json  lambda_function.py
backend/lambdas/analytics_notifier/tests/: test_analytics.py
backend/lambdas/config_saver/: event.json  lambda_function.py
backend/lambdas/config_saver/tests/: conftest.py  test_config.py
backend/lambdas/ingest_status/: __init__.py  alerts.py  event.json  lambda_function.py  parser.py  persistence.py  qa.py  requirements-dev.txt  requirements.txt
backend/lambdas/ingest_status/tests/: test_ingest_status  test_ingest_status.py
backend/lambdas/read_status/: event.json  lambda_function.py  requirements-dev.txt
backend/lambdas/read_status/tests/: test_read.py
backend/shared/utils/: dlq__handler.py
fog/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
fog/.devcontainer/: devcontainer.json
fog/config/: roi_sample.json
fog/src/: config_utils.py  edge_publisher.py  publisher_utils.py  yolo_processor.py
fog/tests/: test_roi_geometry.py
infrastructure/terraform/: dynamodb.tf  iam.tf  main.tf  outputs.tf  sqs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
teraspot/: .gitignore  package.json
teraspot/fog/: requirements.txt
